<resources>
    <!--titile app -->
    <string name="app_name">MyPerformance</string>
    <!-- Timer Activity -->
    <string name="start_counting_time">Start</string>
    <string name="pause_counting_time">Pause</string>
    <string name="stop_counting_time">Stop</string>
    <string name="timer_default_time">00:00:00</string>
    <!--Chart Activity -->
    <string name="days_of_month_title_graph">Производительность по дням</string>
    <!--ScrolBar -->
    <!-- Scrolbar header -->
    <string name="nav_header_title">Name User</string>
    <string name="nav_header_subtitle">Profile ></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Scrolbar items -->
    <string name="menu_timer">Timer</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="menu_app_info">Application information</string>

    <!-- Bottom nav bar -->
    <string name="menu_chart">Chart</string>

    <!-- Tabs chart -->
    <string name="tab_today_chart">Today</string>
    <string name="tab_week_chart">Week</string>
    <string name="tab_all_time_chart">All Time</string>

    <!-- Error message -->
    <string name="error_loading_data">Error loading data</string>
    <string name="error_empty_data_chart">No data for this period</string>
    <string name="error_saving_data">Error saving data</string>
    <string name="error_time_display">Time display error</string>
    <string name="empty_list">The list is empty</string>
    <string name="error_cast_stopwatch_message">Error of casting the type of the received time value</string>

    <!-- App information -->
    <string name="developer_contacts">Developer - Olzumzum </string>
    <string name="developer_contacts_git">github.com/Olzumzum</string>
    <string name="app_version">"Version 2020.07.2 #5 "</string>

    <!-- Personal Area -->
    <string name="user_login">Username</string>
    <string name="user_email">Email</string>
    <string name="goal_title">Your Goal</string>
    <string name="phone_number">Phone number</string>

    <!-- User goal -->
    <string name="user_goal_title">Your goal</string>
    <string name="user_goal_value">000</string>
    <string name="user_goal_subtitle">One the day</string>
    <string name="user_goal_dimension">hours</string>

    <!--Notification-->
    <string name="timer_title_notification">Timer is running</string>
    <string name="stopwatch_title_notification">Stopwatch is running</string>
    <string name="stopwatch_finished_title_notification">Stopwatch completed</string>

    <!-- Stopwatch -->
    <string name="dimen_stopwatch">minutes</string>
    <string name="start_text_button_stopwatch">Start</string>
    <string name="stop_text_button_stopwatch">Stop</string>
    <string name="time_getting_error">Time getting error</string>

</resources>
