<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.timer.TimerFragment">

    <ProgressBar
        android:id="@+id/progressBarTimer"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stop_countring_time"
        style="@style/MyPerf.Button"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/stop_counting_time"
        app:layout_constraintBottom_toBottomOf="@+id/pause_countring_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pause_countring_time"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/pause_countring_time"
        style="@style/MyPerf.Button"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="176dp"
        android:text="@string/pause_counting_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timer_employment" />

    <TextView
        android:id="@+id/timer_employment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:textSize="@dimen/chronometer_text_size"
        android:text="@string/timer_default_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_countring_time"
        style="@style/MyPerf.Button"
        android:layout_marginBottom="36dp"
        android:text="@string/start_counting_time"
        app:layout_constraintBottom_toTopOf="@+id/pause_countring_time"
        app:layout_constraintEnd_toEndOf="@+id/timer_employment"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/timer_employment" />

    <include layout="@layout/bottom_nav"
        android:id="@+id/bottombar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>